<resources>
    <string name="app_name">project</string>
    <string name="gym_tab">Тренировки</string>
    <string name="history_tab">История</string>
    <string name="profile_tab">Профиль</string>
    <string name="settings_tab">Настройки</string>
    <string name="progress_text">Мой прогресс</string>
    <string name="gender_text">Пол</string>
    <string name="age_text">Возраст</string>
    <string name="height_text">Рост</string>
    <string name="weight_text">Вес</string>
    <string name="weight_text_empty">Введите вес</string>
    <string name="height_text_empty">Введите рост</string>
    <string name="index_weight_text">Индекс массы тела</string>
    <string name="program_text">Программа тренировки</string>
    <string name="category_rear_text">Тренировка спины и груди</string>
    <string name="category_legs_text">Тренировка ног</string>
    <string name="category_arms_text">Тренировка плеч и рук</string>
    <string name="end_exercise_text">Завершить упражнение</string>
    <string name="weight_exercise_text">Кг</string>
    <string name="set_exercise_text">Количество подходов</string>
    <string name="start_exercise_text">Начать подход</string>
    <string name="max_weight_text">Максимальный вес</string>
    <string name="empty_list_text">История упражнений отсутствует</string>
    <string name="index_text">Введите рост и вес</string>
    <string name="index_small">Недостаточная масса тела</string>
    <string name="index_norm">Норма</string>
    <string name="index_large">Избыточная масса тела</string>
    <string name="index_very_large">Ожирение</string>


</resources>