<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/viewImageExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/viewTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="3" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:text="@string/set_exercise_text"
            android:gravity="center"
            android:id="@+id/viewSetExercise"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/viewWeightText"/>

        <EditText
            android:gravity="center"
            android:id="@+id/viewWeightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/viewSetExercise"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/weight_exercise_text"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_margin="15dp"
        android:id="@+id/viewStartExerciseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_exercise_text" />

    <Button
        android:id="@+id/viewTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_circle"
        android:text="1:00" />


    <Button
        android:layout_margin="15dp"
        android:id="@+id/viewEndExerciseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_exercise_text" />


</LinearLayout>